--- a/src/apps/main/templates/main/index.html
+++ b/src/apps/main/templates/main/index.html
@@ -24,21 +24,26 @@
         </div>
 
         <div class="content grid">
-            <div class="grid-col-wide-8 grid-col-8 grid-col-tablet-8 grid-col-mobile-4"
-                 style="height: 200px; background: gray">
+            <div class="gray grid-col-wide-8 grid-col-8 grid-col-tablet-8 grid-col-mobile-4"
+                 style="height: 200px">
             </div>
 
-            <div class="grid-col-wide-4 grid-col-4 grid-col-tablet-4 grid-col-mobile-2"
-                 style="height: 50px; background: blue">
+            <div class="blue grid-col-wide-4 grid-col-4 grid-col-tablet-4 grid-col-mobile-2"
+                 style="height: 50px">
             </div>
-            <div class="grid-col-wide-4 grid-col-4 grid-col-tablet-4 grid-col-mobile-2"
-                 style="height: 50px; background: yellow">
+            <div class="yellow grid-col-wide-4 grid-col-4 grid-col-tablet-4 grid-col-mobile-2"
+                 style="height: 50px">
             </div>
         </div>
     </div>
 
     <div id="data">
-
+        <div class="appear-block grid">
+            <div class="yellow grid-col-wide-2 grid-col-2 grid-col-tablet-4 grid-col-mobile-4"></div>
+            <div class="red grid-col-wide-2 grid-col-2 grid-col-tablet-4 grid-col-mobile-4"></div>
+            <div class="gray grid-col-wide-2 grid-col-2 grid-col-tablet-4 grid-col-mobile-4"></div>
+            <div class="orange grid-col-wide-2 grid-col-2 grid-col-tablet-4 grid-col-mobile-4"></div>
+        </div>
     </div>
 
 {% endblock content %}
