--- a/src/apps_common/seo/templates/seo/block.html
+++ b/src/apps_common/seo/templates/seo/block.html
@@ -1,9 +1,9 @@
 {% if instance.text %}
-    <div id="seo-text">
-        <div class="grid">
-            <div class="grid-col-8">
-                <p class="text">{{ instance.text|striptags|linebreaksbr }}</p>
-            </div>
+    <div class="seo-text grid">
+        <div class="grid-col-8">
+            <p class="text">
+                {{ instance.text|striptags|linebreaksbr }}
+            </p>
         </div>
     </div>
 {% endif %}
