--- a/src/static/scss/footer.scss
+++ b/src/static/scss/footer.scss
@@ -6,11 +6,18 @@
   color: white;
   background: black;
 
-  .copyright {
-    margin: 0;
-    text-align: center;
-    padding: 10px 0 30px 0;
-    @include font-size(9px);
+  .seo-text {
+    padding-top: 30px;
+  }
+
+  .contacts {
+    padding: 30px 0;
+
+    .copyright {
+      margin: 0;
+      text-align: center;
+      @include font-size(9px);
+    }
   }
 }
 
