--- a/src/templates/footer.html
+++ b/src/templates/footer.html
@@ -1,3 +1,11 @@
+{% load seo %}
+
 <div id="footer">
-    <p class="copyright">&copy; {% now "Y" %} <a href="/" rel="nofollow">Project</a></p>
+    {% seo_block %}
+
+    <div class="contacts grid">
+        <div class="grid-col-8">
+            <p class="copyright">&copy; {% now "Y" %} <a href="/" rel="nofollow">Project</a></p>
+        </div>
+    </div>
 </div>
