--- a/src/static/scss/video_bg.scss
+++ b/src/static/scss/video_bg.scss
@@ -7,13 +7,17 @@
   top: 0;
   width: 100%;
   height: 100%;
-  text-align: center;
   z-index: 1;
+  @include no_fontsize;
 
   video {
     position: relative;
+    display: block;
+    margin: 0 auto;
+    left: 0;
+    top: 0;
     height: 100%;
-    width: auto;
     z-index: 1;
+    @include no_fontsize;
   }
 }
