--- a/src/apps/main/static/main/scss/index.scss
+++ b/src/apps/main/static/main/scss/index.scss
@@ -29,19 +29,43 @@
 #video {
   position: relative;
   padding-top: 150px;
-  height: 600px;
   min-height: 500px;
   background: no-repeat center red;
   background-size: cover;
+  @include border-box;
   @include no_fontsize;
+  @at-root .js & {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 100;
+  }
+  @at-root .js .video-loaded & {
+    position: relative;
+    width: auto;
+    height: auto;
+    z-index: auto;
+  }
   @include media(mobile) {
     padding-top: 110px;
   }
 
+  video {
+    @at-root .js & {
+      visibility: hidden;
+    }
+    
+    @at-root .js .video-loaded & {
+      visibility: visible;
+    }
+  }
+  
   .content {
     position: relative;
     width: 100%;
-    z-index: 2;
+    z-index: 5;
     @include valign_transform;
   }
 
