--- a/src/static/scss/mixins/_linear_gradient.scss
+++ b/src/static/scss/mixins/_linear_gradient.scss
@@ -15,16 +15,12 @@
   $conversion-map: (
           to top : bottom,
           to top right : bottom left,
-          to right top : left bottom,
           to right : left,
           to bottom right : top left,
-          to right bottom : left top,
           to bottom : top,
           to bottom left : top right,
-          to left bottom : right top,
           to left : right,
-          to left top : right bottom,
-          to top left : bottom right
+          to left top : right bottom
   );
 
   @if map-has-key($conversion-map, $value) {
