--- a/src/static/scss/mixins/_transform.scss
+++ b/src/static/scss/mixins/_transform.scss
@@ -6,3 +6,11 @@
   -o-transform: $args;
   transform: $args;
 }
+
+@mixin transform-origin($args...) {
+  -webkit-transform-origin: $args;
+  -moz-transform-origin: $args;
+  -ms-transform-origin: $args;
+  -o-transform-origin: $args;
+  transform-origin: $args;
+}
