--- a/src/static/scss/video_bg.scss
+++ b/src/static/scss/video_bg.scss
@@ -1,23 +1,28 @@
 @import "mixins";
 
-.video-bg-wrapper {
-  position: absolute;
-  overflow: hidden;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 3;
-  @include no_fontsize;
-
-  video {
+.vigeo-bg {
     position: relative;
-    display: block;
-    margin: 0 auto;
-    left: 0;
-    top: 0;
-    height: 100%;
-    z-index: 1;
-    @include no_fontsize;
-  }
+    
+    .video-bg-wrapper {
+      position: absolute;
+      overflow: hidden;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      z-index: 3;
+      @include no_fontsize;
+
+      video {
+        position: relative;
+        display: block;
+        margin: 0 auto;
+        left: 0;
+        top: 0;
+        height: 100%;
+        z-index: 1;
+        @include no_fontsize;
+      }
+    }
 }
+
