--- a/src/templates/layout.html
+++ b/src/templates/layout.html
@@ -2,6 +2,7 @@
 {% load js_storage %}
 {% load compressed %}
 {% load opengraph %}
+{% load seo %}
 
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" class="no-js">
