--- a/src/static/scss/mixins/_transition.scss
+++ b/src/static/scss/mixins/_transition.scss
@@ -6,3 +6,11 @@
   -o-transition: $args;
   transition: $args;
 }
+
+@mixin transition-timing-function($args...) {
+  -webkit-transition-timing-function: $args;
+  -moz-transition-timing-function: $args;
+  -ms-transition-timing-function: $args;
+  -o-transition-timing-function: $args;
+  transition-timing-function: $args;
+}
