--- a/src/static/scss/popups/popups.scss
+++ b/src/static/scss/popups/popups.scss
@@ -46,6 +46,7 @@
   padding: 14px 16px;
   text-align: initial;
   background-color: #C0C0C0;
+  @include border-box;
   @include border_radius(6px);
 
   .title {
@@ -58,15 +59,28 @@
 
 #popup-close-button {
   position: absolute;
-  right: -32px;
-  top: -32px;
+  right: -40px;
+  top: -40px;
+  width: 40px;
+  height: 40px;
   z-index: 100;
-  width: 46px;
-  height: 46px;
   cursor: pointer;
-  background: url(close-button.png) left bottom no-repeat;
-  @include border_radius(23px);
-  @include unselectable;
+
+  &:before, &:after {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 50%;
+    width: 100%;
+    height: 5px;
+    background: #fff;
+  }
+  &:before {
+    @include transform(translateY(-50%) rotate(45deg));
+  }
+  &:after {
+    @include transform(translateY(-50%) rotate(-45deg));
+  }
 
   &:hover {
     background-position: left top;
