--- a/src/apps/main/templates/main/index.html
+++ b/src/apps/main/templates/main/index.html
@@ -58,7 +58,7 @@
 
     <br>
 
-    {% yandex_map_interactive address=address zoom=14 height=400 header='Hello' %}
-    {% google_map_interactive address=address zoom=14 height=400 header='Hello' %}
+    {% yandex_map_interactive address=address zoom=14 height=400 %}
+    {% google_map_interactive address=address zoom=14 height=400 %}
 
 {% endblock content %}
