--- a/src/apps/main/templates/main/index.html
+++ b/src/apps/main/templates/main/index.html
@@ -37,7 +37,9 @@
         </div>
     </div>
 
-    <div id="parallax_sample" class="parallax">
+    <div id="parallax_sample">
+        <div class="parallax" style="background-image: url({% static 'main/img/background.jpeg' %})"></div>
+
         <div class="appear-block grid">
             <div class="yellow grid-col-wide-2 grid-col-2 grid-col-tablet-4 grid-col-mobile-4"></div>
             <div class="red grid-col-wide-2 grid-col-2 grid-col-tablet-4 grid-col-mobile-4"></div>
