rm client maps + speed up parallax

--- a/src/static/scss/parallax.scss
+++ b/src/static/scss/parallax.scss
@@ -7,6 +7,6 @@
   width: 100%;
   min-height: 100%;
   z-index: 1;
-  background: no-repeat center top;
+  background: no-repeat center;
   background-size: cover;
 }
