--- a/src/static/scss/parallax.scss
+++ b/src/static/scss/parallax.scss
@@ -5,8 +5,8 @@
   left: 0;
   top: 0;
   width: 100%;
-  min-height: 100%;
+  height: 100%;
   z-index: 1;
-  background: no-repeat center;
+  background: no-repeat center top;
   background-size: cover;
 }
