prepare google field

--- a/src/apps/main/templates/main/index.html
+++ b/src/apps/main/templates/main/index.html
@@ -48,4 +48,19 @@
         </div>
     </div>
 
+    <img src="{{ address|google_map_static:"14,600,300" }}">
+
+    <a href='{{ address|google_map_external:14 }}' target='_blank'>посмотреть карту</a>
+
+    <br>
+
+    <img src="{{ address|yandex_map_static:"14,600,300" }}">
+
+    <a href='{{ address|yandex_map_external:14 }}' target='_blank'>посмотреть карту</a>
+
+    <br>
+
+    {% yandex_map_interactive address=address zoom=14 height=400 %}
+    {% google_map_interactive address=address zoom=14 height=400 %}
+
 {% endblock content %}
