--- a/src/templates/layout.html
+++ b/src/templates/layout.html
@@ -5,7 +5,7 @@
 {% load seo %}
 
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" class="no-js">
+<html xmlns="http://www.w3.org/1999/xhtml" class="no-js" lang="{{ LANGUAGE_CODE }}">
 <head>
     <title>{% block title %}{{ seo.title }}{% endblock %}</title>
     <meta name="keywords" content="{{ seo.keywords }}" />
