--- a/src/static/scss/mixins/_reset.scss
+++ b/src/static/scss/mixins/_reset.scss
@@ -18,6 +18,7 @@
     margin: 0;
     padding: 0;
     border: 0;
+    outline: none;
     font: inherit;
     font-size: 100%;
     vertical-align: baseline;
