--- a/src/apps/main/templates/main/index.html
+++ b/src/apps/main/templates/main/index.html
@@ -48,6 +48,25 @@
         </div>
     </div>
 
+    <div id="slider_example">
+        <div class="grid">
+            <div class="grid-col-8">
+                <div class="slider3d">
+                    <div class="slider3d-wrapper">
+                        <img class="slide front" src="{% static "main/img/slider/Chrysanthemum.jpg" %}">
+                        <img class="slide" src="{% static "main/img/slider/Desert.jpg" %}">
+                        <img class="slide" src="{% static "main/img/slider/Hydrangeas.jpg" %}">
+                        <img class="slide" src="{% static "main/img/slider/Jellyfish.jpg" %}">
+                        <img class="slide" src="{% static "main/img/slider/Koala.jpg" %}">
+                        <img class="slide" src="{% static "main/img/slider/Lighthouse.jpg" %}">
+                        <img class="slide" src="{% static "main/img/slider/Penguins.jpg" %}">
+                        <img class="slide" src="{% static "main/img/slider/Tulips.jpg" %}">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <img src="{{ address|yandex_map_static:"14,600,300" }}">
 
     <a href='{{ address|yandex_map_external:14 }}' target='_blank'>посмотреть карту</a>
