--- a/src/static/scss/slider3d.scss
+++ b/src/static/scss/slider3d.scss
@@ -54,6 +54,7 @@
     top: 0;
     width: 6%;
     height: 100%;
+    min-width: 50px;
     z-index: 10;
     cursor: pointer;
     @include unselectable;
