--- a/src/libs/autocomplete/static/autocomplete/css/select2.css
+++ b/src/libs/autocomplete/static/autocomplete/css/select2.css
@@ -596,8 +596,8 @@ disabled look for disabled choices in the results dropdown
     overflow: hidden !important;
     position: absolute !important;
     outline: 0 !important;
-    left: 0px !important;
-    top: 0px !important;
+    left: 0 !important;
+    top: 0 !important;
 }
 
 .select2-display-none {
