--- a/src/apps_common/menu/static/menu/scss/menu.scss
+++ b/src/apps_common/menu/static/menu/scss/menu.scss
@@ -93,10 +93,11 @@
 @include media(mobile, tablet) {
   #main-menu {
     position: absolute;
+    padding: 0 70px;
     right: -100%;
     top: 0;
     width: 80%;
-    padding: 0 70px;
+    height: 100vh;
     z-index: 100;
     color: #FFFFFF;
     background: #0000FF;
