--- a/src/apps/main/templates/main/index.html
+++ b/src/apps/main/templates/main/index.html
@@ -52,7 +52,7 @@
 
     <div id="slider_example">
         <div class="grid">
-            <div class="grid-col-8">
+            <div class="grid-col-8 grid-col-alone">
                 <div class="slider3d">
                     <div class="slider3d-wrapper">
                         <img class="slide front" src="{% static "main/img/slider/Chrysanthemum.jpg" %}">
