--- a/src/static/scss/grid.scss
+++ b/src/static/scss/grid.scss
@@ -14,8 +14,7 @@
   .grid-col-alone {
     float: none;
     clear: both;
-    margin-left: auto;
-    margin-right: auto;
+    margin: 0 auto;
   }
 }
 
