--- a/src/static/scss/layout.scss
+++ b/src/static/scss/layout.scss
@@ -59,6 +59,8 @@ p {
   position: relative;
   display: table;
   width: 100%;
+  height: 768px; // for old
+  height: 100vh;
   color: #FFFFFF;
   text-align: center;
   background: no-repeat center #000000;
@@ -67,7 +69,6 @@ p {
   .inner {
     position: relative;
     display: table-cell;
-    height: 100vh;
     padding-top: 150px;
     z-index: 5;
     vertical-align: middle;
