--- a/src/apps/main/templates/main/index.html
+++ b/src/apps/main/templates/main/index.html
@@ -18,9 +18,7 @@
 
 {% block content %}
     <div id="video" class="section video-bg-container" style="background-image: url({% static 'main/img/river.jpg' %})">
-        <video class="video-bg" autoplay="" loop="" preload="auto" muted="">
-            <source src="{% static 'main/img/river.mp4' %}" type="video/mp4">
-        </video>
+        <video src="{% static 'main/img/river.mp4' %}" class="video-bg" autoplay="" loop="" preload="auto" muted=""></video>
 
         <div class="inner">
             <div class="grid">
