--- a/src/static/scss/video_bg.scss
+++ b/src/static/scss/video_bg.scss
@@ -3,16 +3,18 @@
 .video-bg-container {
   position: relative;
   overflow: hidden;
-}
+  
+  .video-bg {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    min-width: 100%;
+    min-height: 100%;
+    @include transform(translate3d(-50%, -50%, 0));
 
-.video-bg {
-  position: absolute;
-  left: 0;
-  top: 0;
-  min-width: 100%;
-  min-height: 100%;
-
-  &::-webkit-media-controls {
-    display: none;
+    &::-webkit-media-controls {
+      display: none;
+    }
   }
 }
+
