--- a/src/apps/main/templates/main/index.html
+++ b/src/apps/main/templates/main/index.html
@@ -18,7 +18,7 @@
 
 {% block content %}
     <div id="video" class="section video-bg-container" style="background-image: url({% static 'main/img/river.jpg' %})">
-        <video src="{% static 'main/img/river.mp4' %}" class="video-bg" autoplay="" loop="" preload="auto" muted=""></video>
+        <video class="video-bg" src="{% static 'main/img/river.mp4' %}" autoplay="" loop="" preload="auto" muted=""></video>
 
         <div class="inner">
             <div class="grid">
