--- a/src/static/scss/mixins/_unselectable.scss
+++ b/src/static/scss/mixins/_unselectable.scss
@@ -1,5 +1,6 @@
 // Пример: @include unselectable();
 @mixin unselectable() {
+  -webkit-touch-callout: none;
   -webkit-user-select: none; /* Chrome all / Safari all */
   -moz-user-select: none; /* Firefox all */
   -ms-user-select: none; /* IE 10+ */
