--- a/src/static/scss/_mixins.scss
+++ b/src/static/scss/_mixins.scss
@@ -9,6 +9,7 @@
 @import 'mixins/linear_gradient';
 @import 'mixins/opacity';
 @import 'mixins/placeholder';
+@import 'mixins/touch';
 @import 'mixins/transition';
 @import 'mixins/transform';
 @import 'mixins/valign';
