--- a/src/static/scss/mixins/_transition.scss
+++ b/src/static/scss/mixins/_transition.scss
@@ -2,6 +2,7 @@
 @mixin transition($args...) {
   -webkit-transition: $args;
   -moz-transition: $args;
+  -ms-transition: $args;
   -o-transition: $args;
   transition: $args;
 }
@@ -9,6 +10,7 @@
 @mixin transition-property($args...) {
   -webkit-transition-property: $args;
   -moz-transition-property: $args;
+  -ms-transition-property: $args;
   -o-transition-property: $args;
   transition-property: $args;
 }
@@ -16,13 +18,23 @@
 @mixin transition-duration($args...) {
   -webkit-transition-duration: $args;
   -moz-transition-duration: $args;
+  -ms-transition-duration: $args;
   -o-transition-duration: $args;
   transition-duration: $args;
+}
+
+@mixin transition-delay($args...) {
+  -webkit-transition-delay: $args;
+  -moz-transition-delay: $args;
+  -ms-transition-delay: $args;
+  -o-transition-delay: $args;
+  transition-delay: $args;
 }
 
 @mixin transition-timing-function($args...) {
   -webkit-transition-timing-function: $args;
   -moz-transition-timing-function: $args;
+  -ms-transition-timing-function: $args;
   -o-transition-timing-function: $args;
   transition-timing-function: $args;
 }
