--- a/src/apps/main/templates/main/index.html
+++ b/src/apps/main/templates/main/index.html
@@ -49,6 +49,10 @@
     </div>
 
     <div id="slider_example">
+        <div class="parent" style="height: 50px; background: #DADADA; margin: 50px; position: relative;">
+            <div class="handler" style="height: 50px; width: 75px; background: red; position: absolute; left: 0; top: 0;"></div>
+        </div>
+
         <div class="grid">
             <div class="grid-col-8 grid-col-alone">
                 <div class="slider3d">
